<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linkai.app.LoginActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login_title_select_country"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewCountry"
                        android:layout_width="match_parent"
                        android:hint="@string/login_login_hint_country"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="54dp"
                        android:ems="10"
                        />
                    <!--android:popupBackground="@android:color/transparent"-->

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login_title_choose_currency"
                    android:layout_marginTop="30sp"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spinnerCurrency"
                        android:layout_width="match_parent"
                        android:hint="Country"
                        android:layout_height="wrap_content"
                        android:ems="10"

                        />
                    <!--android:popupBackground="@android:color/transparent"-->

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login_title_enter_phone"
                    android:layout_marginTop="30sp"

                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_login_hint_phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <EditText
                        android:id="@+id/txtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:inputType=""
                        android:maxLines="1"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/btnLogin"
                    style="?android:textAppearanceSmall"
                    android:textAlignment="center"
                    android:text="@string/btn_continue"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_width="180sp"
                    android:layout_height="50sp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/app_button"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>