<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.linkai.app.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/imageViewContainer"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorUserIconBg">

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="fill_parent"
                    android:layout_height="200dip"
                    android:src="@drawable/ic_account_black_48dp"
                    android:layout_gravity="top"/>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCamera"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|right"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                app:backgroundTint="@color/colorBubbleOutgoing"
                android:src="@drawable/ic_camera_white_36dp"/>

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:maxLength="40"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/user_profile_hint_name"
                android:drawableStart="@drawable/ic_account_grey600_24dp"
                android:drawableLeft="@drawable/ic_account_grey600_24dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/user_profile_hint_phone"
                android:drawableStart="@drawable/ic_phone_grey600_24dp"
                android:drawableLeft="@drawable/ic_phone_grey600_24dp"
                android:focusable="false"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/user_profile_hint_email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email_grey600_24dp"
                android:drawableLeft="@drawable/ic_email_grey600_24dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/user_profile_hint_address"
                android:inputType="text"
                android:drawableStart="@drawable/ic_map_marker_grey600_24dp"
                android:drawableLeft="@drawable/ic_map_marker_grey600_24dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                />

            <Button
                    android:id="@+id/btnContinue"
                    style="?android:textAppearanceSmall"
                    android:textAlignment="center"
                    android:text="@string/btn_continue"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_width="180sp"
                    android:layout_height="50sp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/app_button"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
